修正协议地址与请求兼容收尾